# fakeloc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  fakeloc-askpass  fakeloc.py  fakeloc_app.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: README.md
docs/en/: README.md
scripts/: fakeloc-askpass
src/fakeloc/: __init__.py  cli.py  core.py  gui.py
