[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fakeloc"
version = "0.1.0"
description = "iPhone GPS spoofing over USB via pymobiledevice3"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MinG"},
]
urls = {
    "Homepage" = "https://github.com/MinG-98/fakeloc",
    "Repository" = "https://github.com/MinG-98/fakeloc",
    "Issues" = "https://github.com/MinG-98/fakeloc/issues",
    "Changelog" = "https://github.com/MinG-98/fakeloc/blob/main/CHANGELOG.md",
}
keywords = [
    "iphone",
    "gps",
    "spoofing",
    "location-simulation",
    "pymobiledevice3",
    "macos",
    "cli",
    "gui",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pymobiledevice3>=1.0",
]

[project.optional-dependencies]
gui = [
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[project.scripts]
fakeloc = "fakeloc.cli:main"
fakeloc-gui = "fakeloc.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
